App Layout, Nested routes, Sidebar and refactor to cleaner approach

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
 .nav-link.active {
   @apply text-primary;
 }
+.app-nav.active {
+  @apply bg-base-300 border-primary;
+}
 
 .hero-section-background {
   background-image: linear-gradient(
