--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,13 @@
     ),
     url('/bg.jpg');
 }
+
+/* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  width: 0;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
